# dipterv1

./: README.md  data_loader.py  kiértékelés.md  main.py  output3.txt  output_new.txt  utils.py
data/instagram/: felfedezes.json  gorgetes.json  messages.json  nyomkodas.json  reels.json  storyk.json  storyk2.json
data/spotify/: dalban_ugralas.json  dalok.json  dalok2.json  dalok_kozott_lepkedes.json  zene.json  zene2.json  zene3.json
data/tiktok/: live.json  live2.json  scroll2.json  scroll3.json  scroll4.json  scroll6.json  scrolling.json
data/whatsapp/: cseveges.json  cseveges2.json  csveges3.json  hivas.json  hivas2.json  hivas3.json
data/youtube/: video.json  video2.json  video3.json  video_lepkedes.json  video_lepkedes2.json  videoban_ugralas.json  zene.json  zene2.json  zene_lepkedes.json
docs/: 1st_run.md  Diplomaterv_ÉlőZsófiaAnna.docx  notes.md  notes.txt
evaluation/: metrics.py
features/: extractor.py
models/: hybrid.py  random_forest.py  rule_based.py  svm.py
outputs/: output.txt
ud_monitor/: CMakeLists.txt  README.md  start_env.sh
ud_monitor/src/: common.h  jitter_calc.py  logger-common.cpp  logger-common.h  mapinmap.bpf.c  mapinmap.cpp  misc.c  nodes_hex.txt  sga_dump_tc.c  sga_taps.h  sga_tctap.cpp  sga_tctap.hpp
ud_monitor/src/.VSCodeCounter/2024-11-13_11-16-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
ud_monitor/src/.VSCodeCounter/2024-11-13_11-21-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
ud_monitor/src/scripts/: convert_add.py  dist_ip.py  distribution.py  validator.py
ud_monitor/src/sga-common/: lfqueue.c  packet_adg.cpp  packet_adg.h  packet_stream.cpp  packet_stream.h  sga_cyclicbuffer.c  sga_cyclicbuffer.h  sga_dbconn.cpp  sga_dbconn.h  sga_etc.cpp  sga_etc.h  sga_socket.cpp  sga_socket.h  sga_sqldb.cpp  sga_sqldb.h  sga_xdp.cpp  sga_xdp.h
ud_monitor/src/sga-common/lib/: libmariadb.so.3
ud_monitor/tools/: xdp-loader  xdp-trafficgen
